[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Editor/Editor_Object.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Entities/Player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GUI/Item_Select.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Objects/preview.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Objects/delete.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Editor/Editor_Camera.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Editor/play.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Editor/FileDialog.gd" type="Script" id=8]
[ext_resource path="res://Scenes/EditorPremade/environment.tscn" type="PackedScene" id=9]
[ext_resource path="res://icon.png" type="Texture" id=10]
[ext_resource path="res://Shaders/pixel.tres" type="Material" id=11]
[ext_resource path="res://Materials/grid.tres" type="Material" id=12]

[sub_resource type="Theme" id=12]

[sub_resource type="PlaneMesh" id=11]

[sub_resource type="BoxShape" id=13]

[node name="main" type="Spatial"]

[node name="pixelizer" type="Sprite" parent="."]
material = ExtResource( 11 )
position = Vector2( 960, 540 )
scale = Vector2( 30, 16.875 )
texture = ExtResource( 10 )
flip_v = true

[node name="UI" type="Control" parent="."]
margin_left = 497.0
margin_top = 7.0
margin_right = 537.0
margin_bottom = 47.0

[node name="Item_Select" parent="UI" instance=ExtResource( 3 )]
margin_left = 1137.0
margin_top = 2.0
margin_right = 1177.0
margin_bottom = 44.0

[node name="FileDialog" type="FileDialog" parent="UI/Item_Select"]
visible = true
margin_left = -1124.0
margin_top = 210.0
margin_right = -661.0
margin_bottom = 536.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 12 )
filters = PoolStringArray( "*.tscn" )
script = ExtResource( 8 )

[node name="Save" type="Button" parent="UI"]
margin_left = 1356.0
margin_top = 1004.0
margin_right = 1399.0
margin_bottom = 1024.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 43.0625, 9.9375 )
text = "SAVE"

[node name="New" type="Button" parent="UI"]
margin_left = -348.0
margin_top = 1006.0
margin_right = -305.0
margin_bottom = 1026.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 43.0625, 9.9375 )
text = "NEW"

[node name="Load" type="Button" parent="UI"]
margin_left = 1010.0
margin_top = 975.0
margin_right = 1059.0
margin_bottom = 995.0
rect_scale = Vector2( 4, 4 )
text = "LOAD"

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="play" type="Button" parent="."]
margin_left = 16.0
margin_top = 17.0
margin_right = 59.0
margin_bottom = 37.0
rect_scale = Vector2( 4, 4 )
text = "PLAY"
script = ExtResource( 7 )
playerSpawn = ExtResource( 2 )

[node name="level" type="Spatial" parent="."]

[node name="floor" type="CSGMesh" parent="level"]
transform = Transform( 61, 0, 0, 0, 1, 0, 0, 0, 61, 0, 0, 0 )
use_collision = true
mesh = SubResource( 11 )
material = ExtResource( 12 )

[node name="environment" parent="level" instance=ExtResource( 9 )]

[node name="Editor_Camera" type="KinematicBody" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Editor_Camera"]
transform = Transform( 23, 0, 0, 0, 1, 0, 0, 0, 13, -0.00794983, 35.0018, -0.00646972 )
shape = SubResource( 13 )

[node name="Camera" type="Camera" parent="Editor_Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 32, 0 )
projection = 1
size = 25.0

[node name="preview" parent="." instance=ExtResource( 4 )]

[node name="delete" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Editor_Object" type="Spatial" parent="."]
script = ExtResource( 1 )

[connection signal="confirmed" from="UI/Item_Select/FileDialog" to="UI/Item_Select/FileDialog" method="_on_FileDialog_confirmed"]
[connection signal="popup_hide" from="UI/Item_Select/FileDialog" to="UI/Item_Select/FileDialog" method="_on_FileDialog_popup_hide"]
[connection signal="mouse_entered" from="UI/Save" to="UI/Item_Select/FileDialog" method="_on_Save_mouse_entered"]
[connection signal="mouse_exited" from="UI/Save" to="UI/Item_Select/FileDialog" method="_on_Save_mouse_exited"]
[connection signal="pressed" from="UI/Save" to="UI/Item_Select/FileDialog" method="_on_Save_pressed"]
[connection signal="mouse_entered" from="UI/New" to="UI/Item_Select/FileDialog" method="_on_Save_mouse_entered"]
[connection signal="mouse_exited" from="UI/New" to="UI/Item_Select/FileDialog" method="_on_Save_mouse_exited"]
[connection signal="pressed" from="UI/New" to="UI/Item_Select/FileDialog" method="_on_New_pressed"]
[connection signal="mouse_entered" from="UI/Load" to="UI/Item_Select/FileDialog" method="_on_Load_mouse_entered"]
[connection signal="mouse_exited" from="UI/Load" to="UI/Item_Select/FileDialog" method="_on_Load_mouse_exited"]
[connection signal="pressed" from="UI/Load" to="UI/Item_Select/FileDialog" method="_on_Load_pressed"]
[connection signal="mouse_entered" from="play" to="play" method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="play" to="play" method="_on_play_mouse_exited"]
[connection signal="pressed" from="play" to="play" method="_on_play_pressed"]
